--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,20 @@
+# ?????????
 spring.datasource.url=jdbc:mysql://localhost:3306/db001
-spring.datasource.username=root
-spring.datasource.password=root001
+spring.datasource.username=guest
+spring.datasource.password=guest001
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.resources.static-locations=classpath:/static/,classpath:/custom-static/
-
 spring.jpa.hibernate.ddl-auto=update
 
+# Doma???
+doma.dataSource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+doma.dataSource.url=jdbc:mysql://localhost:3306/db001
+doma.dataSource.username=guest
+doma.dataSource.password=guest001
+doma.dialect=MYSQL
+
+# ???????????
+spring.resources.static-locations=classpath:/static/,classpath:/custom-static/
+
+# ???????????????
 spring.thymeleaf.prefix=classpath:/templates/
+
