--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	//　Domaのインストール
-	implementation 'org.seasar.doma.boot:doma-spring-boot-starter:1.4.0'
-	annotationProcessor 'org.seasar.doma:doma-processor:2.35.0'
+	implementation 'org.seasar.doma.boot:doma-spring-boot-starter:1.6.0'
+	annotationProcessor 'org.seasar.doma.boot:doma-spring-boot-starter:1.6.0'
+	annotationProcessor 'org.seasar.doma:doma-processor:2.50.0'
 }
 
 tasks.named('test') {
