テーブルの表示

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 # ?????????
-spring.datasource.url=jdbc:mysql://localhost:3306/db001
+spring.datasource.url=jdbc:mysql://localhost:3306/db001?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=guest
 spring.datasource.password=guest001
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 # Doma???
-#doma.dataSource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-#doma.dataSource.url=jdbc:mysql://localhost:3306/db001
-#doma.dataSource.username=guest
-#doma.dataSource.password=guest001
-#doma.dialect=MYSQL
+doma.dataSource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+doma.dataSource.url=jdbc:mysql://localhost:3306/db001?useUnicode=true&characterEncoding=utf8
+doma.dataSource.username=guest
+doma.dataSource.password=guest001
+doma.dialect=MYSQL
 
 # ???????????
 spring.resources.static-locations=classpath:/static/,classpath:/custom-static/
@@ -18,3 +18,4 @@ spring.resources.static-locations=classpath:/static/,classpath:/custom-static/
 # ???????????????
 spring.thymeleaf.prefix=classpath:/templates/
 
+doma.sql-file-repository=NO_CACHE
