--- a/build.gradle
+++ b/build.gradle
@@ -42,3 +42,45 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+//  doma の gradle設定について、下記を参照してください。
+//      https://doma.readthedocs.io/en/2.20.0/build/（日本語訳ページ）
+
+// テンポラリディレクトリのパスを定義する
+ext.domaResourcesDir = "${buildDir}/tmp/doma-resources"
+
+// ---- debug用 -------------------------------------
+//  println "processResources.destinationDir is ${processResources.destinationDir}"
+//  println "ext.domaResourcesDir            is ${ext.domaResourcesDir}"
+//  println "compileJava.destinationDir      is ${compileJava.destinationDir}"
+
+// domaが注釈処理で参照するリソースをテンポラリディレクトリに抽出
+task extractDomaResources(type: Copy, dependsOn: processResources)  {
+	from processResources.destinationDir
+	include 'doma.compile.config'
+	include 'META-INF/**/*.sql'
+	include 'META-INF/**/*.script'
+	into domaResourcesDir
+}
+
+// テンポラリディレクトリ内のリソースをcompileJavaタスクの出力先ディレクトリにコピーする
+task copyDomaResources(type: Copy, dependsOn: extractDomaResources)  {
+	from domaResourcesDir
+	into compileJava.destinationDir
+}
+
+compileJava {
+	// 上述のタスクに依存させる
+	dependsOn copyDomaResources
+	// テンポラリディレクトリをcompileJavaタスクの入力ディレクトリに設定する
+	inputs.dir domaResourcesDir
+	options.encoding = 'UTF-8'
+}
+
+repositories {
+	mavenCentral()
+	mavenLocal()
+	maven {url 'https://oss.sonatype.org/content/repositories/snapshots/'}
+}
+
+
