--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.12-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'war'
 }
 
 group = 'com.example'
@@ -86,4 +87,8 @@ repositories {
 	maven {url 'https://oss.sonatype.org/content/repositories/snapshots/'}
 }
 
-
+// ★warファイル名を指定★
+bootWar {
+	duplicatesStrategy 'INCLUDE'
+	archiveName 'practice.war'
+}
